[package]
name = "rust-lox"
version = "0.1.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.14"}
pretty_env_logger = {version = "0.4"}
lazy_static = "1"