[package]
name = "rust-lox"
version = "0.1.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"

[lib]
name = "lox"
src = "src/lox.rs"

[[bin]]
name = "lox"
path = "src/bin/lox.rs"

[[bin]]
name = "ast"
path = "src/bin/ast.rs"

[dependencies]
log = {version = "0.4.14"}
pretty_env_logger = {version = "0.4"}
phf = { version = "0.9", features = ["macros"] }